# sva-sg-hackathon

./: .gitignore  README.md  flake.nix
backend/: .rustfmt.toml  Cargo.toml  sqlite.db
backend/src/: flowchart.rs  gql.rs  main.rs  models.rs  query_root.rs
backend/src/entity/: decision_node.rs  end_node.rs  flowchart.rs  input_node.rs  mod.rs  node.rs  node_decisions.rs  simple_node.rs  start_node.rs
backend/src/migrator/: m20260213_000001_init_db.rs  mod.rs
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  App.vue  Step_usage_example.vue  api.ts  main.ts  style.css  types.ts
frontend/src/components/: BadEnding.vue  End.vue  GoodEnding.vue  HelloWorld.vue  MaybeEnding.vue  Step.vue  StepOne.vue  StepTwo.vue
frontend/src/data/: stepTwoData.ts
frontend/src/pages/: Assess.vue  EditFlow.vue
frontend/src/stores/: flow.ts  i18n.ts
frontend/src/util/: util.ts
frontend/src/utils/: converter.ts  util.ts
